@@ -35,6 +35,7 @@ Template for new versions:
 - `open-legends`: don't intercept text bound for vanilla search widgets
 - `gui/unit-info-viewer`: correctly display skill levels when rust is involved
 - `timestream`: fix dwarves spending too long eating and drinking
+- `timestream`: accelerate job creation in proportion to calendar time advancement
 - `locate-ore`: fix sometimes selecting an incorrect tile when there are multiple mineral veins in a single map block
 - `gui/settings-manager`: fix position of "settings restored" message on embark when the player has no saved embark profiles
 - `build-now`: fix error when building buildings that (in previous DF versions) required the architecture labor
